@@ -47,10 +47,7 @@ import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.StringSelection;
 import java.awt.image.BufferedImage;
 import java.io.*;
-import java.net.HttpURLConnection;
-import java.net.URI;
-import java.net.URL;
-import java.net.URLEncoder;
+import java.net.*;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -172,7 +169,7 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=GetMessages&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Count="+(Messages.getChildren().size()+Count), new MultipartEntity());
+                request.Start("http://mysweetyphone.herokuapp.com/?Type=GetMessages&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Count="+(Messages.getChildren().size()+Count), new MultipartEntity());
             } catch (IOException e) {
                 e.printStackTrace();
             }
@@ -254,7 +251,11 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, StandardCharsets.UTF_8), entity);
+                try {
+                    request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, "UTF-8"), entity);
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             };
             Destroy anim = new Destroy(vBox);
             anim.play(r);
@@ -310,17 +311,19 @@ public class Saved {
         vBox.getChildren().add(textLabel);
         vBox.getChildren().add(DateLabel);
 
-        File file = new File("src/sample/Images/Download.png");
-        javafx.scene.image.Image image = new Image(file.toURI().toString());
-        BorderPane IconPane = new BorderPane();
-        ImageView Icon = new ImageView(image);
-        Icon.setFitWidth(150);
-        Icon.setFitHeight(150);
-        IconPane.setCenter(Icon);
-        IconPane.prefWidthProperty().bind(vBox.widthProperty().subtract(40));
+        try {
+            BorderPane IconPane = new BorderPane();
+            ImageView Icon = new ImageView(SwingFXUtils.toFXImage(ImageIO.read(getClass().getResourceAsStream("Images/Download.png")),null));
+            Icon.setFitWidth(150);
+            Icon.setFitHeight(150);
+            IconPane.setCenter(Icon);
+            IconPane.prefWidthProperty().bind(vBox.widthProperty().subtract(40));
 
-        vBox.getChildren().add(0,IconPane);
-        VBox.setMargin(vBox, new Insets(5, 0, 0, 0));
+            vBox.getChildren().add(0, IconPane);
+            VBox.setMargin(vBox, new Insets(5, 0, 0, 0));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
 
         final ContextMenu contextMenu = new ContextMenu();
         MenuItem delete = new MenuItem("Удалить");
@@ -365,7 +368,11 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, StandardCharsets.UTF_8), entity);
+                try {
+                    request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, "UTF-8"), entity);
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             };
             Destroy anim = new Destroy(vBox);
             anim.play(r);
@@ -378,7 +385,7 @@ public class Saved {
             if (out == null) return;
             Runnable r = () -> {
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" + URLEncoder.encode(name, StandardCharsets.UTF_8) + "&Login=" + URLEncoder.encode(login, StandardCharsets.UTF_8) + "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" + URLEncoder.encode(name, "UTF-8") + "&Login=" + URLEncoder.encode(login, "UTF-8") + "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
 
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
@@ -445,7 +452,7 @@ public class Saved {
         (new Thread(() -> {
             while (true)
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" + URLEncoder.encode(name, StandardCharsets.UTF_8) + "&Login=" + URLEncoder.encode(login, StandardCharsets.UTF_8) + "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" + URLEncoder.encode(name, "UTF-8") + "&Login=" + URLEncoder.encode(login, "UTF-8") + "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
 
@@ -518,7 +525,11 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, StandardCharsets.UTF_8), new MultipartEntity());
+                try {
+                    request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, "UTF-8"), new MultipartEntity());
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             };
             Destroy anim = new Destroy(vBox);
             anim.play(r);
@@ -530,7 +541,7 @@ public class Saved {
             if(out == null) return;
             Runnable r = () -> {
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
 
@@ -602,7 +613,7 @@ public class Saved {
         new Thread(() -> {
             while (true)
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
 
@@ -698,7 +709,11 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, StandardCharsets.UTF_8), entity);
+                try {
+                    request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, "UTF-8"), entity);
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             };
             Destroy anim = new Destroy(vBox);
             anim.play(r);
@@ -710,7 +725,7 @@ public class Saved {
             if(out == null) return;
             Runnable r = () -> {
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
 
@@ -800,7 +815,7 @@ public class Saved {
 
             while (true) {
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate=" + regdate + "&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate=" + regdate + "&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
 
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
@@ -895,7 +910,11 @@ public class Saved {
                         });
                     }
                 };
-                request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, StandardCharsets.UTF_8), entity);
+                try {
+                    request.Start("http://mysweetyphone.herokuapp.com/?Type=DelMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Date="+date+"&Msg="+URLEncoder.encode(text, "UTF-8"), entity);
+                } catch (UnsupportedEncodingException e) {
+                    e.printStackTrace();
+                }
             };
             Destroy anim = new Destroy(vBox);
             anim.play(r);
@@ -907,7 +926,7 @@ public class Saved {
             if(out == null) return;
             Runnable r = () -> {
                 try {
-                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, StandardCharsets.UTF_8) + "&Date=" + date);
+                    URL obj = new URL("http://mysweetyphone.herokuapp.com/?Type=DownloadFile&RegDate="+regdate+"&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id + "&FileName=" + URLEncoder.encode(text, "UTF-8") + "&Date=" + date);
                     HttpURLConnection connection = (HttpURLConnection) obj.openConnection();
                     connection.setRequestMethod("GET");
 
@@ -985,7 +1004,11 @@ public class Saved {
                     });
                 }
             };
-            request.Start("http://mysweetyphone.herokuapp.com/?Type=SendMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, StandardCharsets.UTF_8)+"&Login="+URLEncoder.encode(login, StandardCharsets.UTF_8)+"&Id="+id+"&Msg="+URLEncoder.encode(MessageText.getText(), StandardCharsets.UTF_8), entity);
+            try {
+                request.Start("http://mysweetyphone.herokuapp.com/?Type=SendMessage&RegDate="+regdate+"&MyName="+URLEncoder.encode(name, "UTF-8")+"&Login="+URLEncoder.encode(login, "UTF-8")+"&Id="+id+"&Msg="+URLEncoder.encode(MessageText.getText(), "UTF-8"), entity);
+            } catch (UnsupportedEncodingException e) {
+                e.printStackTrace();
+            }
         };
         Thread t = new Thread(r);
         t.start();
@@ -1048,7 +1071,7 @@ public class Saved {
                                 });
                             }
                         };
-                        request.Start("http://mysweetyphone.herokuapp.com/?Type=UploadFile&RegDate=" + regdate + "&MyName=" +URLEncoder.encode(name, StandardCharsets.UTF_8)+ "&Login=" +URLEncoder.encode(login, StandardCharsets.UTF_8)+ "&Id=" + id, entity);
+                        request.Start("http://mysweetyphone.herokuapp.com/?Type=UploadFile&RegDate=" + regdate + "&MyName=" +URLEncoder.encode(name, "UTF-8")+ "&Login=" +URLEncoder.encode(login, "UTF-8")+ "&Id=" + id, entity);
                     } catch (IOException e) {
                         e.printStackTrace();
                     }
